# esp-hal

./: CHANGELOG.md
.github/actions/build-tests/: action.yml
.github/workflows/: api-baseline-check.yml  api-baseline-generation.yml  binary_size.yml  changelog.yml  ci.yml  ci_nightly.yml  dispatch.yml  gatekeeper.yml  get-labels.yml  hil.yml  merge-conflict.yml  pre-rel-check.yml
documentation/: HIL-GUIDE.md
esp-hal/: CHANGELOG.md  Cargo.toml  MIGRATING-0.23.md  README.md  build.rs
esp-hal/src/: ecc.rs  etm.rs  i2c.rs  i2s.rs  lib.rs  otg_fs.rs  parl_io.rs  prelude.rs  rmt.rs  sha.rs  system.rs  trace.rs  uart.rs  usb_serial_jtag.rs
esp-hal/src/aes/: esp32cX.rs  mod.rs
esp-hal/src/analog/adc/: riscv.rs
esp-hal/src/clock/: mod.rs
esp-hal/src/dma/: gdma.rs  mod.rs  pdma.rs
esp-hal/src/gpio/: asynch.rs  mod.rs
esp-hal/src/i2c/master/: mod.rs
esp-hal/src/i2c/master/low_level/: mod.rs
esp-hal/src/i2c/slave/: mod.rs
esp-hal/src/interrupt/riscv/: clic.rs
esp-hal/src/lcd_cam/: mod.rs
esp-hal/src/ledc/: mod.rs
esp-hal/src/mcpwm/: mod.rs
esp-hal/src/pcnt/: mod.rs
esp-hal/src/rsa/: mod.rs
esp-hal/src/rtc_cntl/: cpu_retention.rs  mod.rs  power_domain.rs  retention.rs  sleep_retention.rs
esp-hal/src/rtc_cntl/retention/: esp32c6.rs  esp32h2.rs
esp-hal/src/rtc_cntl/rtc/: esp32h2.rs
esp-hal/src/rtc_cntl/sleep/: esp32c6.rs  esp32h2.rs
esp-hal/src/soc/esp32/: gpio.rs
esp-hal/src/spi/: master.rs  slave.rs
esp-hal/src/spi/master/: mod.rs
esp-hal/src/spi/master/low_level/: mod.rs
esp-hal/src/timer/: systimer.rs  timg.rs
esp-hal/src/twai/: mod.rs
esp-hal/src/uart/: mod.rs
esp-hal/src/usb/: usb_serial_jtag.rs
esp-metadata-generated/src/: _build_script_utils.rs  _generated_esp32.rs  _generated_esp32c3.rs  _generated_esp32c5.rs  _generated_esp32c6.rs  _generated_esp32h2.rs  _generated_esp32s2.rs  _generated_esp32s3.rs
esp-metadata/devices/: esp32.toml  esp32c3.toml  esp32c5.toml  esp32c6.toml  esp32h2.toml  esp32s2.toml  esp32s3.toml
esp-metadata/src/: cfg.rs
esp-radio/: CHANGELOG.md
esp-radio/src/ble/: mod.rs
esp-radio/src/wifi/: ap.rs  mod.rs  state.rs
esp-rtos/src/: scheduler.rs
esp-storage/: Cargo.toml
esp-storage/src/: common.rs  lib.rs
examples/peripheral/touch/src/: main.rs
examples/wifi/embassy_coex/: Cargo.toml
examples/wifi/embassy_dhcp/src/: main.rs
extras/esp32s3-tetris/: CMakeLists.txt  README.md  sdkconfig.defaults
extras/esp32s3-tetris/main/: CMakeLists.txt  idf_component.yml  tetris_main.c
hil-test/: Cargo.toml
hil-test-radio/: Cargo.toml
hil-test/tests/: aes_dma.rs  dma_mem2mem.rs  i2s.rs  lcd_cam_i8080.rs  lcd_cam_i8080_async.rs  pcnt.rs
qa-test/: Cargo.toml
xtask/src/: firmware.rs  lib.rs  main.rs  radio_hil_runner.rs
xtask/src/commands/: generate_report.rs  mod.rs  run.rs
