[package]
name    = "hil-test"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
name = "hil_test"

# esp-hal tests:
[[bin]]
name              = "alloc_psram"
path              = "src/bin/esp_hal/alloc_psram.rs"
harness           = false
required-features = ["psram"]
 
[[bin]]
name              = "crypto"
path              = "src/bin/esp_hal/crypto.rs"
harness           = false
 
[[bin]]
name              = "embassy_timers_executors"
path              = "src/bin/esp_hal/embassy_timers_executors.rs"
harness           = false
required-features = ["embassy"]

[[bin]]
name              = "radio_basic"
path              = "src/bin/esp_hal/radio_basic.rs"
harness           = false
required-features = ["esp-alloc"]
 
[[bin]]
name              = "gpio"
path              = "src/bin/esp_hal/gpio.rs"
harness           = false
 
[[bin]]
name              = "gpio_custom_handler"
path              = "src/bin/esp_hal/gpio_custom_handler.rs"
harness           = false
 
[[bin]]
name              = "i2c"
path              = "src/bin/esp_hal/i2c.rs"
harness           = false
 
[[bin]]
name              = "i2s"
path              = "src/bin/esp_hal/i2s.rs"
harness           = false
 
[[bin]]
name              = "interrupt"
path              = "src/bin/esp_hal/interrupt.rs"
harness           = false
 
[[bin]]
name              = "lcd_cam"
path              = "src/bin/esp_hal/lcd_cam.rs"
harness           = false
 
[[bin]]
name              = "misc_drivers"
path              = "src/bin/esp_hal/misc_drivers.rs"
harness           = false
 
[[bin]]
name              = "misc_non_drivers"
path              = "src/bin/esp_hal/misc_non_drivers.rs"
harness           = false
 
[[bin]]
name              = "parl_io"
path              = "src/bin/esp_hal/parl_io.rs"
harness           = false
 
[[bin]]
name              = "rmt"
path              = "src/bin/esp_hal/rmt.rs"
harness           = false
required-features = ["embassy", "esp-alloc"]
 
[[bin]]
name              = "spi_full_duplex"
path              = "src/bin/esp_hal/spi_full_duplex.rs"
harness           = false
 
[[bin]]
name              = "spi_half_duplex_slave_qspi"
path              = "src/bin/esp_hal/spi_half_duplex_slave_qspi.rs"
harness           = false
 
[[bin]]
name              = "spi_half_duplex_write_psram"
path              = "src/bin/esp_hal/spi_half_duplex_write_psram.rs"
harness           = false
 
[[bin]]
name              = "storage_read_app_desc"
path              = "src/bin/esp_hal/storage_read_app_desc.rs"
harness           = false
 
[[bin]]
name              = "uart"
path              = "src/bin/esp_hal/uart.rs"
harness           = false
 
# esp-radio tests
[[bin]]
name              = "esp_radio"
path              = "src/bin/esp_radio/esp_radio.rs"
harness           = false
required-features = ["esp-alloc", "esp-radio"]

[dependencies]
allocator-api2    = { version = "0.3.0", default-features = false, features = ["alloc"] }
cfg-if             = "1"
critical-section   = "1"
defmt              = "1.0.1"
defmt-rtt          = { version = "1.0.0", optional = true }
embassy-executor   = { version = "0.9.0", default-features = false }
embassy-futures    = "0.1"
embedded-storage   = "0.3.1"
embassy-sync       = "0.7.2"
embassy-time       = "0.5.0"
embedded-hal       = "1.0.0"
embedded-io        = "0.7.1"
embedded-io-async  = "0.7.0"
embedded-can       = "0.4.1"
embedded-hal-async = "1.0.0"
esp-alloc          = { path = "../esp-alloc", optional = true }
esp-bootloader-esp-idf = { path = "../esp-bootloader-esp-idf" }
esp-hal            = { path = "../esp-hal", features = ["defmt"] }
esp-metadata-generated = { path = "../esp-metadata-generated" }
esp-rtos           = { path = "../esp-rtos", features = ["defmt"], optional = true }
esp-storage        = { path = "../esp-storage", optional = true }
esp-sync           = { path = "../esp-sync" }
esp-radio          = { path = "../esp-radio", features = ["defmt"], optional = true }
esp-radio-rtos-driver = { path = "../esp-radio-rtos-driver", optional = true }
portable-atomic    = "1.11"
static_cell        = { version = "2.1.0" }
semihosting        = { version = "0.1", features= ["stdio", "panic-handler"] }

trouble-host = { version = "0.6.0", features = [
    "default-packet-pool-mtu-255",
    "derive",
    "scan",
], optional = true }

primeorder          = { version = "0.13.0", default-features = false }
crypto-bigint       = { version = "0.5.5", default-features = false }
digest              = { version = "0.10.7", default-features = false }
elliptic-curve      = { version = "0.13.8", default-features = false, features = ["sec1"] }
# Add the `embedded-test/defmt` feature for more verbose testing
embedded-test       = { version = "0.7", default-features = false, features = ["embassy", "external-executor", "semihosting", "defmt"] }
hex-literal         = "1.0.0"
nb                  = "1.1.0"
p192                = { version = "0.13.0", default-features = false, features = ["arithmetic"] }
p256                = { version = "0.13.2", default-features = false, features = ["arithmetic"] }
p384                = { version = "0.13.1", default-features = false, features = ["arithmetic"] }
sha1                = { version = "0.10.6", default-features = false }
sha2                = { version = "0.10.8", default-features = false }

# radio HIL deps
embassy-net = { version = "0.8.0", features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "dns",
] }
reqwless = { version = "0.14.0", default-features = false }
edge-dhcp = "0.7.0"
edge-nal = "0.6.0"
edge-nal-embassy = "0.8.1"

[build-dependencies]
esp-metadata-generated = { path = "../esp-metadata-generated", features = ["build-script"] }

[features]
default = []
unstable = ["esp-hal/unstable"]

defmt = ["dep:defmt-rtt"]
esp-radio = ["dep:esp-radio", "dep:esp-rtos", "dep:esp-radio-rtos-driver", "esp-rtos/esp-radio"]
embassy = ["dep:esp-rtos", "esp-rtos/embassy"]
rtos-radio-driver = ["dep:esp-rtos", "esp-rtos/esp-radio", "dep:esp-radio-rtos-driver"]

# Device support (required!):
esp32 = [
    "embedded-test/xtensa-semihosting",
    "esp-hal/esp32",
    "esp-alloc/esp32",
    "esp-radio?/esp32",
    "esp-storage?/esp32",
    "esp-bootloader-esp-idf/esp32",
    "esp-metadata-generated/esp32",
    "esp-rtos?/esp32",
]
esp32c2 = [
    "esp-hal/esp32c2",
    "esp-alloc/esp32c2",
    "esp-radio?/esp32c2",
    "esp-storage?/esp32c2",
    "esp-bootloader-esp-idf/esp32c2",
    "esp-metadata-generated/esp32c2",
    "esp-rtos?/esp32c2"
]
esp32c3 = [
    "esp-hal/esp32c3",
    "esp-alloc/esp32c3",
    "esp-radio?/esp32c3",
    "esp-storage?/esp32c3",
    "esp-bootloader-esp-idf/esp32c3",
    "esp-metadata-generated/esp32c3",
    "esp-rtos?/esp32c3",
]
esp32c5 = [
    "esp-hal/esp32c5",
    "esp-alloc/esp32c5",
    "esp-radio?/esp32c5",
    "esp-storage?/esp32c5",
    "esp-bootloader-esp-idf/esp32c5",
    "esp-metadata-generated/esp32c5",
    "esp-rtos?/esp32c5",
]
esp32c6 = [
    "esp-hal/esp32c6",
    "esp-alloc/esp32c6",
    "esp-radio?/esp32c6",
    "esp-storage?/esp32c6",
    "esp-bootloader-esp-idf/esp32c6",
    "esp-metadata-generated/esp32c6",
    "esp-rtos?/esp32c6",
]
esp32c61 = [
    "esp-hal/esp32c61",
    "esp-alloc/esp32c61",
    "esp-radio?/esp32c61",
    "esp-storage?/esp32c61",
    "esp-bootloader-esp-idf/esp32c61",
    "esp-metadata-generated/esp32c61",
    "esp-rtos?/esp32c61",
]
esp32h2 = [
    "esp-hal/esp32h2",
    "esp-alloc/esp32h2",
    "esp-radio?/esp32h2",
    "esp-storage?/esp32h2",
    "esp-bootloader-esp-idf/esp32h2",
    "esp-metadata-generated/esp32h2",
    "esp-rtos?/esp32h2",
]
esp32s2 = [
    "embedded-test/xtensa-semihosting",
    "esp-hal/esp32s2",
    "esp-alloc/esp32s2",
    "esp-radio?/esp32s2",
    "esp-storage?/esp32s2",
    "esp-bootloader-esp-idf/esp32s2",
    "esp-metadata-generated/esp32s2",
    "esp-rtos?/esp32s2"
]
esp32s3 = [
    "embedded-test/xtensa-semihosting",
    "esp-hal/esp32s3",
    "esp-alloc/esp32s3",
    "esp-radio?/esp32s3",
    "esp-storage?/esp32s3",
    "esp-bootloader-esp-idf/esp32s3",
    "esp-metadata-generated/esp32s3",
    "esp-rtos?/esp32s3",
]

psram = ["esp-hal/psram", "esp-alloc"]

# https://doc.rust-lang.org/cargo/reference/profiles.html#test
# Test and bench profiles inherit from dev and release respectively.
[profile.dev]
codegen-units    = 1
debug            = 2
debug-assertions = true
incremental      = false
opt-level        = "z"
overflow-checks  = true

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = true
incremental      = false
opt-level        = 3
lto              = false # LTO (thin or fat) miscompiles some tests on RISC-V
overflow-checks  = true
